@@ -23,3 +23,4 @@ Apr 23 1998	 Fix several errors
 Apr 28 1998      Add remaining options
 Apr 29 1998      Bug fixes and Id's in all files
 		 No constraints in esp when intergal molecule
+		 Make sgm format identical to previous format
